V1.0.10
---------
 * Support editable comboboxes not derived from `QComboBox`.
 * Clean drawing of `QDateTimeEdit` with calendar widget (Qt badly draws a lineedit over a combobox).

V1.0.9
---------
 * Fixed a regression that caused crashes in QML apps and LibreOffice when the widget animation was disabled.
 * Workaround for bad codes that give an enormous contents size to item-views.

V1.0.8
---------
 * Fixed dragging of inactive windows of multi-window apps under Wayland.
 * Fixed a miscalculation about setting menu-item height in a rare case.
 * Improved the workaround for Qt's hover bug in combo-boxes (especially under Wayland).
 * Workaround for Qt's hover bug in header views (especially under Wayland).
 * Support combo menu icons whose widths are greater than the small icon size.
 * Limited the extra vertical margins of menu-item icons to 1px.
 * Smaller text-icon spacing for editable comboboxes that are drawn as lineedits.
 * Added vertical text margins of lineedits to their heights.
 * Also animate busy progressbars without `QWidget` (like "indeterminate" QML progressbars).

V1.0.7
---------
 * Don't rely on the (undocumented) "Destroy" event to remove destroyed widgets from lists. In this way, the cause of a rare crash is removed.
 * Better guarantee for the lack of scrollbars in the config page of Kvantum Manager when it's visited for the first time.

V1.0.6
---------
 * Added a workaround for Kate's new status-bar and side-pane buttons, which still have wrong style codes.
 * Added some Qt6 parameters.
 * Silenced the compilation warnings with Qt 6.4.

V1.0.5
---------
 * Added a workaround for wrong app codes that don't give the required info to CT_MenuItem.
 * Added a workaround for wrong app codes that don't give the required space to tabbar scroll arrows.
 * Added a workaround for a new bug in Krita 5.1.0. A buggy code in the jungle of Krita's source causes a freeze when CT_ProgressBar gives a height greater than that of the contents size.